# programacao

./: CMakeLists.txt  README.md
Modelo_P1_Prática/: common-letters.cpp  expand.cpp  largest.cpp  rotate-left.cpp  time-add.cpp
P00_HelloC++/: CMakeLists.txt  basic-calculation.cpp  divisors.cpp  even-odd.cpp  hello-world.cpp  range.cpp
P01_SyntaxPrimitiveTypesEtc/: CMakeLists.txt  char-types.cpp  fizz-buzz.cpp  pernicious.cpp  pi.cpp  primes.cpp
P02/: CMakeLists.txt
P02_Functions/: CMakeLists.txt  bc.cpp  bell.cpp
P03_Structs/: complex.cpp  fraction.cpp  interval.cpp  mandelbrot.cpp  time_of_day.cpp
P04-aggregateDataTypes-Arrays/: CMakeLists.txt  hstr-to-integer.cpp  max.cpp  merge-arrays.cpp  merge-dynamic-arrays.cpp
P05_PointersDynamicMemory/: CMakeLists.txt  alist_append.cpp  duplicate.cpp  expand_cdata.cpp  longest_string.cpp  median.cpp
P06_StringsVectorsTemplateFunctions/: CMakeLists.txt  longest-common-prefix.cpp  longest-common-prefix2.cpp  normalise-vector.cpp  pangram.cpp  sparse-matrix-add.cpp  string-split.cpp
P07_StreamBasedInputOutput/: CMakeLists.txt  count-words.cpp  maximum.cpp  median-values.cpp  normalise.cpp  wc.cpp
P09_SeparateCompilation-ClassTemplates/: CMakeLists.txt  Color.cpp  Color.h  Date.cpp  Person.cpp  Point.cpp  Point.h  Polygon.cpp  Polygon.h  p2_main.cpp  p3_main.cpp  pair.cpp  stack.cpp
P10_ClassInheritance/: CMakeLists.txt  Circle.cpp  Circle.h  Cylinder.cpp  Cylinder.h  ErasmusStudent.cpp  ErasmusStudent.h  Operation.cpp  Operation.h  Person.cpp  Person.h  Power.cpp  Power.h  Product.cpp  Product.h  Rectangle.cpp  Rectangle.h  ResaleProduct.cpp  ResaleProduct.h  Shape.cpp  Shape.h  Solid.cpp  Solid.h  Student.cpp  Student.h  Sum.cpp  Sum.h  tp10_ex1_main.cpp  tp10_ex2_main.cpp  tp10_ex3_main.cpp  tp10_ex4_main.cpp  tp10_ex5_main.cpp
P11_StandardTemplateLibrary/: CMakeLists.txt  MovingAverage.cpp  Point.cpp  count-words.cpp  iterators.cpp  map-romans.cpp
P12_UsingSTL/: CMakeLists.txt  Date.h  books.cpp  count-words.cpp  dates.cpp  highest.cpp  replace.cpp
P8_Classes/: CMakeLists.txt  date1.cpp  date2.cpp  date3.cpp  fraction.cpp  point2d.cpp
Prog-cpp/: arrays.cpp  function_overloading.cpp  namespaces.cpp  recursion_ref.cpp  structs_T03.cpp
Py01_SyntaxPrimitiveTypesEtc/: CMakeLists.txt  calculator.cpp  einstein.cpp  hello.cpp  md.cpp  reverse.cpp  test.cpp  test.h
TP03 Structs/: CMakeLists.txt  complex.cpp  fraction.cpp  interval2.cpp  mandelbrot.cpp
Tests/: CMakeLists.txt  test10.cpp  test11.cpp  test12.cpp  test5.cpp  test7.cpp  test8.cpp
